--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,19 @@
 #
 
 # Site settings
-title: Spectral
+title: Psychomen
 description: |
-  Another fine responsive  
-  site template freebie  
+   AdeTiaraPutri
+   AstridYolanda
+   AlexSwandi
+   FarisNazari
+   SuciMaisaroh  
   crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
+owner: Psychomen # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
 email: your-email@domain.com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://ProjectApmob.github.io" # the base hostname & protocol for your site
 social:
   twitter: https://twitter.com/<username>
   github: https://github.com/<username>
