--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ owner: Psychomen # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
 email: your-email@domain.com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://ProjectApmob.github.io" # the base hostname & protocol for your site
+url: "http://psychomen.github.io" # the base hostname & protocol for your site
 social:
   twitter: https://twitter.com/<username>
   github: https://github.com/<username>
